--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,9 @@
-.tip{
+.underscore_div{
     background-color: #ff0000;
     color: #fffeba;
 }
 
 .example_div{
-    background-color: #05cdff;
+    background-color: #ffe4c6;
     color: #740000;
 }   
